disabled clock; added option for day view, other minor changes  - disabled clock temporarily  - added option to disable day view on mobile (there is currently no way to enable day view on PC; will probably happen later)  - fixed styling of options arrow on Mac (or any other computer with Segoe UI  - added new title title

--- a/style.css
+++ b/style.css
@@ -215,8 +215,8 @@ table{
 	position: absolute;
 	left: 0;
 	top: 0;
-	padding: 0 .35em .1em;
-	font-size: 1.66em;
+	padding: .2em .35em;
+	font: 1.66em Arial;
 	text-align: left;
 	cursor: pointer;
 }
@@ -269,11 +269,12 @@ table{
 	position: absolute;
 	right: 0;
 	top: 0;
-	padding-right: 7px;
-	padding-top: 5px;
+	padding: 7px 10px;
+	border-bottom-left-radius: 5px;
+	background: rgba(255,255,255,.5);
 	font-size: 1.5em;
 	font-weight: bold;
-	letter-spacing: .05em;
+	/* letter-spacing: .05em; */
 	color: #333;
 }
 
